<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:visibility="visible"
    tools:context="com.xmsnm.xmasnightmare.SecondPart4Fragment"
    tools:visibility="visible">

    <Button
        android:id="@+id/next_round_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raindeer_d"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/raindeer_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:width="300sp"
        android:text="@string/raindeer_d7"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raindeer_image_4"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/raindeer_hp_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hp_0"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/raindeer_image_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <ImageView
        android:id="@+id/raindeer_image_4"
        android:layout_width="229dp"
        android:layout_height="225dp"
        android:src="@drawable/raindeer_eyecross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/defeated_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defeated"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/raindeer_image_4"
        app:layout_constraintEnd_toEndOf="@+id/raindeer_image_4"
        app:layout_constraintStart_toStartOf="@+id/raindeer_image_4"
        app:layout_constraintTop_toBottomOf="@+id/raindeer_hp_0" />
</androidx.constraintlayout.widget.ConstraintLayout>